# agentic-memory

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  design_tracking.md  docker-compose.test.yml  docker-compose.yml  logging.debug-agents.json  logging.json  main.py  pylint_scratchpad.md  pyproject.toml  requirements.txt  run_cli.py  run_inference_agent.py  run_node.py  run_validator_agent.py
docs/: agent_status_pattern.md  debugging.md  design_tracking.md  graph_patterns.md  knowledge_representation.md  meta_language_exploration.md  neo4j.md  schema_agent_design.md  schema_framework_spec.md  test_tracking.md  validation_redesign.md  visual_ui_design.md
prompts/inference_agent/: infer.yaml
prompts/llm_translator/: claim.yaml  observation.yaml  query_generation.yaml  synthesis.yaml
prompts/shared/: base.yaml
prompts/validator_agent/: contradiction.yaml
src/: agent_registry.py  agent_state.py  api.py  api_client.py  cli.py  events.py  interfaces.py  llm.py  logging_config.py  memory_protocol.py  prompts.py  store.py  websocket_manager.py
src/agents/: base.py  inference.py  validator.py
src/p2p/: __init__.py  gossip.py  local_state.py  memory_client.py  messages.py  node.py  routing.py  transport.py  types.py  ui_bridge.py
src/schema/: __init__.py  bootstrap.yaml  compiler.py  loader.py  store.py
tests/: conftest.py  test_integration.py  test_interfaces.py  test_llm.py  test_p2p.py  test_prompts.py  test_schema.py  test_schema_compiler.py  test_schema_store.py  test_store.py  test_validator_unit.py
ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/AgentTopology/: AgentTopology.tsx
ui/src/components/EventStream/: EventStream.tsx
ui/src/components/GraphView/: GraphView.tsx
ui/src/components/StatusBar/: StatusBar.tsx
ui/src/components/common/: Panel.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/stores/: agentStore.ts  eventStore.ts  graphStore.ts
ui/src/styles/: globals.css
ui/src/types/: index.ts
